--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,8 @@ dependencies {
     compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6'
     compile group: 'jfree', name: 'jfreechart', version: '1.0.12'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+    compile group: 'org.apache.derby', name: 'derby', version: '10.14.1.0'
+    compile group: 'org.apache.derby', name: 'derbyclient', version: '10.14.1.0'
+    compile group: 'javax.servlet.jsp', name: 'jsp-api', version: '2.1'
 }
